--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
@@ -62,7 +62,7 @@
   command: "cp -r {{ xray_untar_home }}/. {{ xray_home }}"
   when: not app_dir_check.stat.exists
 
-- name: Create required directories 
+- name: Create required directories
   become: yes
   file:
     path: "{{ item }}"
@@ -79,8 +79,7 @@
   become: yes
   copy:
     dest: "{{ xray_home }}/var/etc/security/master.key"
-    content: |
-      {{ master_key }}
+    content: "{{ master_key }}"
     owner: "{{ xray_user }}"
     group: "{{ xray_group }}"
     mode: 0640
@@ -108,12 +107,11 @@
     exp_executable_cmd: "./install.sh -u {{ xray_user }} -g {{ xray_group }}"
     exp_dir: "{{ xray_install_script_path }}"
     exp_scenarios: "{{ xray_installer_scenario['main'] }}"
-  args: 
+  args:
     apply:
-      environment: 
-        YQ_PATH: "{{ xray_thirdparty_path }}/yq" 
+      environment:
+        YQ_PATH: "{{ xray_thirdparty_path }}/yq"
   when: install_wrapper_script.stat.exists
-  ignore_errors: yes
 
 - name: Configure rabbitmq config
   become: yes
@@ -122,11 +120,21 @@
     dest: "{{ xray_home }}/app/bin/rabbitmq/rabbitmq.conf"
   notify: restart xray
 
+- name: Check if systemyaml exists
+  become: yes
+  stat:
+    path: "{{ xray_home }}/var/etc/system.yaml"
+  register: systemyaml
+
 - name: Configure systemyaml
   become: yes
   template:
     src: "{{ xray_system_yaml_template }}"
     dest: "{{ xray_home }}/var/etc/system.yaml"
+  when: 
+    - xray_systemyaml is defined  
+    - xray_systemyaml|length > 0
+    - xray_systemyaml_override or (not systemyaml.stat.exists) 
   notify: restart xray
 
 - name: Configure installer info
@@ -151,15 +159,16 @@
     {{ xray_archive_service_cmd }}
   args:
     chdir: "{{ xray_install_script_path }}"
+    creates: "{{ xray_service_file }}"
   register: check_service_status_result
-  ignore_errors: yes
 
 - name: Restart xray
   meta: flush_handlers
 
-- name : Wait for xray to be fully deployed  
+- name : Wait for xray to be fully deployed
   uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
   register: result
   until: result.status == 200
   retries: 25
   delay: 5
+  when: not ansible_check_mode
