--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -5,12 +5,16 @@
 - name: install nginx
   include_role:
     name: artifactory_nginx
-  when: artifactory_nginx_enabled == true
+  when: 
+    - artifactory_nginx_enabled | bool
+    - not artifactory_nginx_ssl_enabled | bool
 
 - name: install nginx with SSL
   include_role:
     name: artifactory_nginx_ssl
-  when: artifactory_nginx_ssl_enabled == true
+  when: 
+    - not artifactory_nginx_enabled | bool
+    - artifactory_nginx_ssl_enabled | bool
 
 - name: Ensure group artifactory exist
   become: yes
@@ -55,7 +59,7 @@
   command: "cp -r {{ artifactory_untar_home }}/. {{ artifactory_home }}"
   when: not app_dir_check.stat.exists
 
-- name: Create required directories 
+- name: Create required directories
   become: yes
   file:
     path: "{{ item }}"
@@ -64,39 +68,36 @@
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
   loop:
-    - "{{ artifactory_file_store_dir }}"
     - "{{ artifactory_home }}/var/data"
     - "{{ artifactory_home }}/var/etc"
     - "{{ artifactory_home }}/var/etc/security/"
     - "{{ artifactory_home }}/var/etc/artifactory/info/"
+
+- name: Check if systemyaml exists
+  become: yes
+  stat:
+    path: "{{ artifactory_home }}/var/etc/system.yaml"
+  register: systemyaml
 
 - name: Configure systemyaml
   become: yes
   template:
     src: "{{ artifactory_system_yaml_template }}"
     dest: "{{ artifactory_home }}/var/etc/system.yaml"
+  when: 
+    - artifactory_systemyaml is defined  
+    - artifactory_systemyaml|length > 0
+    - artifactory_systemyaml_override or (not systemyaml.stat.exists) 
   notify: restart artifactory
 
 - name: Configure master key
   become: yes
   copy:
     dest: "{{ artifactory_home }}/var/etc/security/master.key"
-    content: |
-      {{ master_key }}
+    content: "{{ master_key }}"
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
     mode: 0640
-
-- name: Configure join key
-  become: yes
-  copy:
-    dest: "{{ artifactory_home }}/var/etc/security/join.key"
-    content: |
-      {{ join_key }}
-    owner: "{{ artifactory_user }}"
-    group: "{{ artifactory_group }}"
-    mode: 0640
-  notify: restart artifactory
 
 - name: Configure installer info
   become: yes
@@ -110,6 +111,9 @@
   template:
     src: binarystore.xml.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/binarystore.xml"
+  when: 
+    - artifactory_binarystore is defined  
+    - artifactory_binarystore|length > 0
   notify: restart artifactory
 
 - name: Configure single license
@@ -117,16 +121,26 @@
   template:
     src: artifactory.lic.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.lic"
-  when: artifactory_single_license is defined
+  when: 
+    - artifactory_single_license is defined  
+    - artifactory_single_license|length > 0
   notify: restart artifactory
 
-- name: Configure HA licenses 
+- name: Configure HA licenses
   become: yes
   template:
     src: artifactory.cluster.license.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.cluster.license"
-  when: artifactory_licenses is defined
+  when:
+   - artifactory_licenses is defined 
+   - artifactory_licenses|length > 0
   notify: restart artifactory
+
+- name: Check if database driver exists
+  become: yes
+  stat:
+    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/jf_postgresql-{{ postgres_driver_version }}.jar"
+  register: database_driver
 
 - name: Download database driver
   become: yes
@@ -135,13 +149,17 @@
     dest: "{{ artifactory_home }}/var/bootstrap/artifactory/tomcat/lib"
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
-  when: postgres_driver_download_url is defined
+  when: 
+    - postgres_driver_download_url is defined
+    - not database_driver.stat.exists
   notify: restart artifactory
 
 - name: Create artifactory service
   become: yes
   shell: "{{ artifactory_home }}/app/bin/installService.sh"
-  
+  args:
+    creates: "{{ artifactory_service_file }}"
+
 - name: Ensure permissions are correct
   become: yes
   file:
@@ -153,9 +171,10 @@
 - name: Restart artifactory
   meta: flush_handlers
 
-- name : Wait for artifactory to be fully deployed  
+- name : Wait for artifactory to be fully deployed
   uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
   register: result
   until: result.status == 200
   retries: 25
   delay: 5
+  when: not ansible_check_mode
