--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
@@ -2,18 +2,6 @@
 - debug:
     msg: "Performing upgrade of Artifactory version to : {{ artifactory_version }} "
 
-- name: Stop artifactory
-  become: yes
-  systemd:
-    name: "{{ artifactory_daemon }}"
-    state: stopped
-
-- name: Ensure jfrog_home_directory exists
-  become: yes
-  file:
-    path: "{{ jfrog_home_directory }}"
-    state: directory
-
 - name: Download artifactory for upgrade
   become: yes
   unarchive:
@@ -28,41 +16,67 @@
   until: downloadartifactory is succeeded
   retries: 3
 
+- name: Stop artifactory
+  become: yes
+  systemd:
+    name: "{{ artifactory_daemon }}"
+    state: stopped
+  when: downloadartifactory.changed
+
+- name: Ensure jfrog_home_directory exists
+  become: yes
+  file:
+    path: "{{ jfrog_home_directory }}"
+    state: directory
+
 - name: Delete artifactory app directory
   become: yes
   file:
     path: "{{ artifactory_home }}/app"
     state: absent
+  when: downloadartifactory.changed
 
 - name: Copy new app to artifactory app
   become: yes
   command: "cp -r {{ artifactory_untar_home }}/app/. {{ artifactory_home }}/app"
-
-- name: Configure join key
-  become: yes
-  copy:
-    dest: "{{ artifactory_home }}/var/etc/security/join.key"
-    content: |
-      {{ join_key }}
-    owner: "{{ artifactory_user }}"
-    group: "{{ artifactory_group }}"
-    mode: 0640
-  notify: restart artifactory
+  when: downloadartifactory.changed
 
 - name: Configure single license
   become: yes
   template:
     src: artifactory.lic.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.lic"
-  when: artifactory_single_license is defined
+  when: 
+    - artifactory_single_license is defined  
+    - artifactory_single_license|length > 0
   notify: restart artifactory
 
-- name: Configure HA licenses 
+- name: Configure HA licenses
   become: yes
   template:
     src: artifactory.cluster.license.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/artifactory.cluster.license"
-  when: artifactory_licenses is defined
+  when:
+   - artifactory_licenses is defined 
+   - artifactory_licenses|length > 0
+  notify: restart artifactory
+
+- name: Check if database driver exists
+  become: yes
+  stat:
+    path: "{{ artifactory_home }}/app/artifactory/tomcat/lib/jf_postgresql-{{ postgres_driver_version }}.jar"
+  register: database_driver
+
+- name: Download database driver
+  become: yes
+  get_url:
+    url: "{{ postgres_driver_download_url }}"
+    dest: "{{ artifactory_home }}/var/bootstrap/artifactory/tomcat/lib"
+    owner: "{{ artifactory_user }}"
+    group: "{{ artifactory_group }}"
+  when: 
+    - postgres_driver_download_url is defined
+    - not database_driver.stat.exists
   notify: restart artifactory
 
 - name: Configure installer info
@@ -77,13 +91,26 @@
   template:
     src: binarystore.xml.j2
     dest: "{{ artifactory_home }}/var/etc/artifactory/binarystore.xml"
+  when: 
+    - artifactory_binarystore is defined  
+    - artifactory_binarystore|length > 0
   notify: restart artifactory
+
+- name: Check if systemyaml exists
+  become: yes
+  stat:
+    path: "{{ artifactory_home }}/var/etc/system.yaml"
+  register: systemyaml
 
 - name: Configure systemyaml
   become: yes
   template:
     src: "{{ artifactory_system_yaml_template }}"
     dest: "{{ artifactory_home }}/var/etc/system.yaml"
+  when: 
+    - artifactory_systemyaml is defined  
+    - artifactory_systemyaml|length > 0
+    - artifactory_systemyaml_override or (not systemyaml.stat.exists) 
   notify: restart artifactory
 
 - name: Ensure permissions are correct
@@ -97,9 +124,10 @@
 - name: Restart artifactory
   meta: flush_handlers
 
-- name : Wait for artifactory to be fully deployed  
+- name : Wait for artifactory to be fully deployed
   uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
   register: result
   until: result.status == 200
   retries: 25
   delay: 5
+  when: not ansible_check_mode
