--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/meta/main.yml
@@ -1,6 +1,6 @@
 galaxy_info:
   author: "JFrog Maintainers Team <installers@jfrog.com>"
-  description: "The missionControl role will install missionControl software onto the host. An Artifactory server and Postgress database is required."
+  description: "The missioncontrol role will install missioncontrol software onto the host. An Artifactory server and Postgress database is required."
   company: JFrog
 
   issue_tracker_url: "https://github.com/jfrog/JFrog-Cloud-Installers/issues"
@@ -10,7 +10,7 @@ galaxy_info:
   min_ansible_version: 2.9
 
   galaxy_tags:
-    - missionControl
+    - missioncontrol
     - jfrog
 
 dependencies: []
