--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/setup-searchguard.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/setup-searchguard.yml
@@ -1,31 +1,18 @@
-- name: Copy elasticsearch certificate
+- name: Copy elasticsearch cert files
   become: yes
   copy:
     mode: 0600
-    src: files/searchguard/localhost.pem
-    dest: "{{ mc_es_conf_base }}/localhost.pem"
+    src: "files/searchguard/{{ item }}"
+    dest: "{{ mc_es_conf_base }}/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
-
-- name: Copy elasticsearch private key
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/localhost.key
-    dest: "{{ mc_es_conf_base }}/localhost.key"
-    owner: elasticsearch
-    group: elasticsearch
-
-- name: Copy searchguard root ca
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/root-ca.pem
-    dest: "{{ mc_es_conf_base }}/root-ca.pem"
-    owner: elasticsearch
-    group: elasticsearch
+  loop:
+    - "localhost.pem"
+    - "localhost.key"
+    - "root-ca.pem"
 
 - name: Find searchguard bundle
+  become: yes
   find:
     paths: "{{ mc_home }}/app/third-party/elasticsearch/"
     patterns: "^search-guard-.+\\.zip$"
@@ -46,50 +33,30 @@
   register: install_searchguard_result
   when: check_searchguard_bundle_result.matched == 1
 
-- name: Copy searchguard admin certificate
+- name: Copy searchguard certificate files
   become: yes
   copy:
     mode: 0600
-    src: files/searchguard/sgadmin.pem
-    dest: "{{ mc_es_searchgaurd_home }}/tools/sgadmin.pem"
+    src: "files/searchguard/{{ item }}"
+    dest: "{{ mc_es_searchgaurd_home }}/tools/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
+  loop:
+    - "sgadmin.pem"
+    - "sgadmin.key"
+    - "root-ca.pem"
 
-- name: Copy searchguard admin private key
+- name: Copy SG roles files
   become: yes
   copy:
     mode: 0600
-    src: files/searchguard/sgadmin.key
-    dest: "{{ mc_es_searchgaurd_home }}/tools/sgadmin.key"
+    src: "files/searchguard/{{ item }}"
+    dest: "{{ mc_es_searchgaurd_home }}/sgconfig/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
-
-- name: Copy searchguard root ca
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/root-ca.pem
-    dest: "{{ mc_es_searchgaurd_home }}/tools/root-ca.pem"
-    owner: elasticsearch
-    group: elasticsearch
-
-- name: Copy roles template
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/sg_roles.yml
-    dest: "{{ mc_es_searchgaurd_home }}/sgconfig/sg_roles.yml"
-    owner: elasticsearch
-    group: elasticsearch
-
-- name: Copy roles template
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/sg_roles_mapping.yml
-    dest: "{{ mc_es_searchgaurd_home }}/sgconfig/sg_roles_mapping.yml"
-    owner: elasticsearch
-    group: elasticsearch
+  loop:
+    - "sg_roles.yml"
+    - "sg_roles_mapping.yml"
 
 - name: Check execution bit
   become: yes
