--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade-searchguard.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade-searchguard.yml
@@ -1,58 +1,27 @@
 - name: Create elasticsearch config path folder
   become: yes
   file:
-    path: "{{ mc_es_conf_base }}/searchguard"
+    path: "{{ mc_es_conf_base }}"
     state: directory
     mode: 0755
     owner: elasticsearch
     group: elasticsearch
 
-- name: Copy elasticsearch certificate
+- name: Copy elasticsearch cert files
   become: yes
   copy:
     mode: 0600
-    src: files/searchguard/localhost.pem
-    dest: "{{ mc_es_conf_base }}/localhost.pem"
+    src: "files/searchguard/{{ item }}"
+    dest: "{{ mc_es_conf_base }}/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
-
-- name: Copy elasticsearch private key
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/localhost.key
-    dest: "{{ mc_es_conf_base }}/localhost.key"
-    owner: elasticsearch
-    group: elasticsearch
-
-- name: Copy searchguard admin certificate
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/sgadmin.pem
-    dest: "{{ mc_es_conf_base }}/searchguard/sgadmin.pem"
-    owner: elasticsearch
-    group: elasticsearch
-
-- name: Copy searchguard admin private key
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/sgadmin.key
-    dest: "{{ mc_es_conf_base }}/searchguard/sgadmin.key"
-    owner: elasticsearch
-    group: elasticsearch
-
-- name: Copy searchguard root ca
-  become: yes
-  copy:
-    mode: 0600
-    src: files/searchguard/root-ca.pem
-    dest: "{{ mc_es_conf_base }}/root-ca.pem"
-    owner: elasticsearch
-    group: elasticsearch
+  loop:
+    - "localhost.pem"
+    - "localhost.key"
+    - "root-ca.pem"
 
 - name: Find searchguard bundle
+  become: yes
   find:
     paths: "{{ mc_home }}/app/third-party/elasticsearch/"
     patterns: "^search-guard-.+\\.zip$"
@@ -66,35 +35,42 @@
   ignore_errors: yes
   shell: |
     {{ mc_es_script_path }}/elasticsearch-plugin install \
-        -b file://{{ check_searchguard_bundle_result.files[0].path }}
+    -b file://{{ check_searchguard_bundle_result.files[0].path }}
   environment:
     JAVA_HOME: "{{ mc_es_java_home }}"
     ES_PATH_CONF: "{{ mc_es_conf_base }}/"
   register: install_searchguard_result
   when: check_searchguard_bundle_result.matched == 1
 
-- name: Copy roles template
+- name: Copy searchguard cert files
   become: yes
   copy:
     mode: 0600
-    src: files/searchguard/sg_roles.yml
-    dest: "{{ mc_es_home }}/plugins/search-guard-7/sgconfig/sg_roles.yml"
+    src: "files/searchguard/{{ item }}"
+    dest: "{{ mc_es_searchgaurd_home }}/tools/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
+  loop:
+    - "sgadmin.pem"
+    - "sgadmin.key"
+    - "root-ca.pem"
 
-- name: Copy roles template
+- name: Copy SG roles files
   become: yes
   copy:
     mode: 0600
-    src: files/searchguard/sg_roles_mapping.yml
-    dest: "{{ mc_es_home }}/plugins/search-guard-7/sgconfig/sg_roles_mapping.yml"
+    src: "files/searchguard/{{ item }}"
+    dest: "{{ mc_es_searchgaurd_home }}/sgconfig/{{ item }}"
     owner: elasticsearch
     group: elasticsearch
+  loop:
+    - "sg_roles.yml"
+    - "sg_roles_mapping.yml"
 
 - name: Check execution bit
   become: yes
   file:
-    path: "{{ mc_es_home }}/plugins/search-guard-7/tools/sgadmin.sh"
+    path: "{{ mc_es_searchgaurd_home }}/tools/sgadmin.sh"
     owner: elasticsearch
     group: elasticsearch
     mode: 0700
