--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/upgrade.yml
@@ -2,12 +2,6 @@
 - debug:
     msg: "Performing Upgrade of missionControl version - {{ missioncontrol_version }}"
 
-- name: Stop mc service
-  become: yes
-  systemd:
-    name: "{{ mc_daemon }}"
-    state: stopped
-
 - name: Download mc for upgrade
   unarchive:
     src: "{{ mc_tar }}"
@@ -21,30 +15,42 @@
   until: downloadmc is succeeded
   retries: 3
 
+- name: Stop mc service
+  become: yes
+  systemd:
+    name: "{{ mc_daemon }}"
+    state: stopped
+  when: downloadmc.changed
+
 - name: Delete current app folder
   become: yes
   file:
     path: "{{ mc_home }}/app"
     state: absent
+  when: downloadmc.changed
 
 - name: Copy new app to mc app
   command: "cp -r {{ mc_untar_home }}/app/. {{ mc_home }}/app"
   become: yes
+  when: downloadmc.changed
 
 - name: Delete untar directory
   file:
     path: "{{ mc_untar_home }}"
     state: absent
   become: yes
+  when: downloadmc.changed
 
 - name: Upgrade elasticsearch
   import_tasks: upgrade-elasticsearch.yml
+  when: downloadmc.changed
 
 - name: Check if install.sh wrapper script exist
   become: yes
   stat:
     path: "{{ mc_install_script_path }}/install.sh"
   register: upgrade_wrapper_script
+  when: downloadmc.changed
 
 - name: Include interactive installer scripts
   include_vars: script/archive.yml
@@ -55,11 +61,13 @@
     exp_executable_cmd: "./install.sh -u {{ mc_user }} -g {{ mc_group }}"
     exp_dir: "{{ mc_install_script_path }}"
     exp_scenarios: "{{ mc_installer_scenario['main'] }}"
-  args: 
+  args:
     apply:
-      environment: 
-        YQ_PATH: "{{ mc_thirdparty_path }}/yq" 
-  when: upgrade_wrapper_script.stat.exists
+      environment:
+        YQ_PATH: "{{ mc_thirdparty_path }}/yq"
+  when: 
+    - upgrade_wrapper_script.stat.exists
+    - downloadmc.changed
 
 - name: Configure installer info
   become: yes
@@ -68,11 +76,21 @@
     dest: "{{ mc_home }}/var/etc/info/installer-info.json"
   notify: restart missioncontrol
 
+- name: Check if systemyaml exists
+  become: yes
+  stat:
+    path: "{{ mc_home }}/var/etc/system.yaml"
+  register: systemyaml
+
 - name: Configure systemyaml
+  become: yes
   template:
     src: "{{ mc_system_yaml_template }}"
     dest: "{{ mc_home }}/var/etc/system.yaml"
-  become: yes
+  when: 
+    - mc_systemyaml is defined  
+    - mc_systemyaml|length > 0
+    - mc_systemyaml_override or (not systemyaml.stat.exists) 
   notify: restart missioncontrol
 
 - name: Update correct permissions
@@ -83,14 +101,14 @@
     recurse: yes
     owner: "{{ mc_user }}"
     group: "{{ mc_group }}"
-    mode: '0755'
 
 - name: Restart missioncontrol
   meta: flush_handlers
 
-- name : Wait for missionControl to be fully deployed  
+- name : Wait for missionControl to be fully deployed
   uri: url=http://127.0.0.1:8082/router/api/v1/system/health timeout=130
   register: result
   until: result.status == 200
   retries: 25
   delay: 5
+  when: not ansible_check_mode
