--- a/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/setup-elasticsearch.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/missioncontrol/tasks/setup-elasticsearch.yml
@@ -155,8 +155,7 @@
 
 - name: Start elasticsearch
   become: yes
-  become_user: elasticsearch
-  shell: "{{ mc_es_script_path }}/elasticsearch -d"
+  shell: "su -c '{{ mc_es_script_path }}/elasticsearch -d' elasticsearch"
   environment:
     JAVA_HOME: "{{ mc_es_java_home }}"
     ES_PATH_CONF: "{{ mc_es_conf_base }}/"
