--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/tasks/main.yml
@@ -84,11 +84,13 @@
   become_user: postgres
   command: psql -d {{ mc_db_name }} -t -c "\dn"
   register: mc_schemas_loaded
+  when: mc_db_name is defined
 
 - name: Create schemas for mission-control
   become: yes
   become_user: postgres
   command: psql -d {{ mc_db_name }} -c 'CREATE SCHEMA {{ item }} authorization {{ mc_db_user }}'
+  when: mc_db_name is defined
   loop: "{{  mc_schemas|default([]) }}"
   when: "mc_schemas_loaded.stdout is defined and '{{ item }}' not in mc_schemas_loaded.stdout"
 
@@ -101,6 +103,7 @@
     type: schema
     roles: "{{ mc_db_user }}"
     objs: "{{ item }}"
+  when: mc_db_name is defined
   loop: "{{ mc_schemas|default([]) }}"
 
 - name: Grant privs on db
