[Ansible] JFrog Platform 7.21.12

--- a/Ansible/ansible_collections/jfrog/platform/group_vars/all/vars.yml
+++ b/Ansible/ansible_collections/jfrog/platform/group_vars/all/vars.yml
@@ -15,6 +15,7 @@ artifactory_enabled: true
 xray_enabled: true
 distribution_enabled: true
 mc_enabled: true
+postgres_enabled: true
 
 # Artifactory DB details
 artifactory_db_type: postgresql
